--- a/src/pages/main-server/main-server.scss
+++ b/src/pages/main-server/main-server.scss
@@ -57,6 +57,13 @@ page-main-server {
           left:10%;
         }
       }
+
+      .mybuttonblue{
+        box-shadow: 0 20px 30px -20px rgb(53, 78, 204) !important;
+      }
+      .mybuttongray{
+        box-shadow:  0 20px 30px -20px #6E6E6E !important;
+      }
     }
   }
 }
