增加了注册后填写信息以及选择器功能

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -211,22 +211,22 @@ ion-toolbar{
 }
 
 /*轮转效果*/
-.picker-md .picker-wrapper {
-  height: 100% !important;
-}
-.picker-md .picker-columns {
-  height: 80% !important;
-  margin-top: 20% !important;
-}
-.picker-md .picker-opt {
-  font-size: 30px !important;
-  margin-top: 100% !important;
-  max-width: 80px !important;
-}
+// .picker-md .picker-wrapper {
+//   height: 100% !important;
+// }
+// .picker-md .picker-columns {
+//   height: 80% !important;
+//   margin-top: 20% !important;
+// }
+// .picker-md .picker-opt {
+//   font-size: 30px !important;
+//   margin-top: 100% !important;
+//   max-width: 80px !important;
+// }
 
-.picker-md .picker-col {
-  padding: 0 !important;
-  max-width: 100px !important;
-}
+// .picker-md .picker-col {
+//   padding: 0 !important;
+//   max-width: 100px !important;
+// }
 
 
