增加设置页面

--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -26,12 +26,13 @@ page-forgot-password {
     text-align: center;
     padding: 4% 8% 0 8%;
     .title1{
-      line-height: 45px;
+      margin:4% 0;
       font-size: 18px;
       font-weight: bold;
     }
     .title2{
-      line-height: 25px;
+      line-height: 140%;
+      margin:4% 0;
       font-size: 16px;
       color:#6A6A6A;
     }
@@ -47,7 +48,7 @@ page-forgot-password {
     }
   }
   .bottomPart {
-    margin-top: 65%;
+    margin-top: 63%;
     width: 100%;
     text-align: center;
     color: #959595;
