--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -209,6 +209,9 @@ ion-menu{
 ion-toolbar{
   box-shadow: 0 23px 30px -20px rgb(53, 78, 204) !important;
 }
+ion-navbar{
+  box-shadow: 0 23px 30px -20px rgb(53, 78, 204) !important;
+}
 
 /*轮转效果*/
 // .picker-md .picker-wrapper {
